# ragprobe

./: .gitignore  .pre-commit-config.yaml  BASELINE.md  CLAUDE.md  README.md  agent.py  package.json  promptfooconfig.js  pyproject.toml  ragas_eval.py  ragas_metrics.py  ragpipe_provider.py  targets.yaml.example
.github/workflows/: ci.yml  security.yml
assertions/: grounding.py
docs/: architecture.md  configuration.md  ragas-evaluation.md
prompts/: system-prompt.txt
ragas/: corpus.yaml
ragprobe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: compare_targets.py  quickstart.sh  reload-and-eval.sh  run_baseline.py  run_ragas_eval.py  smoke-test.sh  smoke_test.py
tests/: boundary.yaml  confidence.yaml  conftest.py  context_poisoning.yaml  corpus_boundary.yaml  cross_source.yaml  exfiltration.yaml  hallucination.yaml  injection.yaml  leading.yaml  multilingual.yaml  ragas_eval.yaml  role_confusion.yaml  scope_creep.yaml  temporal.yaml  test_compare_targets.py  test_live_integration.py  test_ragas_eval.py
