[build-system]
requires = ["setuptools>=61.0"]

[project]
name = "ragprobe"
version = "0.1.0"
description = "Adversarial testing and autonomous prompt tuning agent for ragpipe"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "ragas>=0.2.0",
    "psycopg2-binary>=2.9",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "shellcheck-py>=0.9.0",
]

[project.scripts]
ragprobe-agent = "agent:main"

[tool.setuptools.packages.find]
include = ["ragas_eval*", "ragas_metrics*"]
